--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 HELP.md
 .gradle
 build/
+gradlew
+gradlew.bat
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
@@ -14,6 +16,7 @@ build/
 .springBeans
 .sts4-cache
 .yaml
+
 bin/
 !**/src/main/**/bin/
 !**/src/test/**/bin/
